test/programs/invalid/_custom/final_abstract_class.java
public final abstract class B {
}
